--- a/Deliveries/Integrarion Test Plan/Integration Test Plan_temp.lyx
+++ b/Deliveries/Integrarion Test Plan/Integration Test Plan_temp.lyx
@@ -531,10 +531,27 @@ RASD
 \begin_layout Itemize
 
 \series bold
-Sub-system
+Component
 \series default
-: Each set of Components that interact each others in order to accomplish
- business operations;
+: The smallest part of the system, which implements a specific function
+ in the business application; it's the first part to be unit-tested;
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+Subsystem
+\series default
+: Each set of Components, or Lower Level Subsystem that interact each others
+ in order to accomplish business operations;
+\end_layout
+
+\begin_layout Itemize
+
+\series bold
+First Level Subsystem
+\series default
+: Each Subsystem which composed only of Components;
 \end_layout
 
 \begin_layout Subsection
@@ -592,11 +609,15 @@ Elements to be Integrated
 \begin_layout Standard
 The elements to be integrated are, according to the strategy explained in
  the section 2.3 of this document, the single components of the system, as
- described in the Design Document.
+ described in the Design Document, 
+\emph on
+Section 2.3
+\emph default
+.
 \end_layout
 
 \begin_layout Standard
-To give a best description of these 
+To give a brief summary of these 
 \begin_inset Quotes eld
 \end_inset
 
@@ -604,7 +625,7 @@ atomic
 \begin_inset Quotes erd
 \end_inset
 
- elements of the system, here is a list:
+ elements of the system, they are listed below:
 \end_layout
 
 \begin_layout Itemize
@@ -688,20 +709,23 @@ Software Integration Sequence
 \end_layout
 
 \begin_layout Standard
-The sub-systems below described are composed by the components described
- in the section 2.2 of this document.
-\begin_inset Newline newline
-\end_inset
-
-For each sub-system are listed the available operations for the specific
+For each subsystem are listed the available operations for the specific
  context.
+\end_layout
+
+\begin_layout Standard
+In this section are listed the First Level Subsystems, that are basically
+ nine, one for each class of operations.
+ They are below divided into three main groups: Guest subsystem (S1), Customer
+ subsystems (S2 to S5) and Taxi Driver subsystems (S6 to S9), depending
+ on the actor involved in the considered class of operations.
 \end_layout
 
 \begin_layout Standard
 
 \series bold
 S1.
- Guest sub-system
+ Guest subsystem
 \end_layout
 
 \begin_layout Standard
@@ -752,7 +776,7 @@ Figure 2.1
 
 \series bold
 S2.
- Customer Profile Management sub-system
+ Customer Profile Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -803,7 +827,7 @@ Figure 2.
 
 \series bold
 S3.
- Customer Logout Management sub-system
+ Customer Logout Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -834,7 +858,7 @@ Figure 2.
 
 \series bold
 S4.
- Customer Immediate Call Management sub-system
+ Customer Immediate Call Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -865,7 +889,7 @@ Figure 2.
 
 \series bold
 S5.
- Customer Reservation Call Management sub-system
+ Customer Reservation Call Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -896,7 +920,7 @@ Figure 2.
 
 \series bold
 S6.
- Taxi Driver Profile Management sub-system
+ Taxi Driver Profile Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -939,7 +963,7 @@ Figure 2.
 
 \series bold
 S7.
- Taxi Driver Incoming Call Management sub-system
+ Taxi Driver Incoming Call Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -981,7 +1005,7 @@ Figure 2.
 
 \series bold
 S8.
- Taxi Driver Assistance Call Management sub-system
+ Taxi Driver Assistance Call Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -1020,7 +1044,7 @@ Figure 2.
 
 \series bold
 S9.
- Taxi Driver Logout Management sub-system
+ Taxi Driver Logout Management subsystem
 \end_layout
 
 \begin_layout Itemize
@@ -1049,14 +1073,6 @@ Figure 2.
 
 \begin_layout Subsubsection
 Subsystem Integration Sequence
-\end_layout
-
-\begin_layout Standard
-Identify the order in which subsystems will be integrated.
- If you have a single subsystem, 2.4.1 and 2.4.2 are to be merged in a single
- section.
- You can refer to Section 2.2 of the test plan example [1] as an example
- of what we expect.
 \end_layout
 
 \begin_layout Standard
@@ -1105,7 +1121,7 @@ Since that the system has to be cross-platform, each integration test has
 \begin_layout Subsection
 
 \series bold
-Guest Component sub-system
+Guest Component subsystem (S1)
 \end_layout
 
 \begin_layout Standard
@@ -1167,7 +1183,7 @@ the Data Manager driver is substituted with real component, while a driver
 \series bold
 I13
 \series default
-: the whole sub-system is tested without using any driver; the test is passed
+: the whole subsystem is tested without using any driver; the test is passed
  when all the notifications, for all the supported operations, are dispatched
  to the correct receiver.
 \end_layout
@@ -1358,13 +1374,13 @@ Guest Component, Authentication Manager, Data Manager, Notification Manager
 \shape italic
 Table 3.1
 \shape default
-: Integration sequence table for the Guest sub-system testing
+: Integration sequence table for the Guest subsystem testing
 \end_layout
 
 \begin_layout Subsection
 
 \series bold
-Customer Component sub-system
+Customer Component subsystem
 \end_layout
 
 \begin_layout Standard
@@ -1421,13 +1437,13 @@ the Data Manager driver is substituted with real component, while a driver
 \series bold
 I23
 \series default
-: the whole sub-system is tested without using any driver; the test is passed
+: the whole subsystem is tested without using any driver; the test is passed
  when all the notifications, for all the supported operations, are dispatched
  to the correct receiver.
 \end_layout
 
 \begin_layout Subsubsection
-Customer Profile Manager
+Customer Profile Manager (S2)
 \end_layout
 
 \begin_layout Standard
@@ -1617,7 +1633,7 @@ Table 3.2
 \end_layout
 
 \begin_layout Subsubsection
-Customer Logout Manager
+Customer Logout Manager (S3)
 \end_layout
 
 \begin_layout Standard
@@ -1758,7 +1774,7 @@ Table 3.
 \end_layout
 
 \begin_layout Subsubsection
-Immediate Call Manager 
+Immediate Call Manager (S4)
 \end_layout
 
 \begin_layout Standard
@@ -1831,14 +1847,14 @@ I33
 I34
 \series default
 : finally, the Notification Manager Component substitutes the last driver
- used in the previous testing sequence, in order to test the whole sub-system;
+ used in the previous testing sequence, in order to test the whole subsystem;
  the test is passed when all the notifications, for all the supported operations
 , are dispatched to the correct receiver.
 \end_layout
 
 \begin_layout Standard
-This current sub-system testing case needs some drivers that substitutes
- components of an external sub-system, successively tested and integrated
+This current subsystem testing case needs some drivers that substitutes
+ components of an external subsystem, successively tested and integrated
  with this one:
 \end_layout
 
@@ -2075,7 +2091,7 @@ Table 3.4
 \end_layout
 
 \begin_layout Subsubsection
-Reservation Call Manager
+Reservation Call Manager (S5)
 \end_layout
 
 \begin_layout Standard
@@ -2155,8 +2171,8 @@ I44
 \end_layout
 
 \begin_layout Standard
-This current sub-system testing case needs some drivers that substitutes
- components of an external sub-system, successively tested and integrated
+This current subsystem testing case needs some drivers that substitutes
+ components of an external subsystem, successively tested and integrated
  with this one:
 \end_layout
 
@@ -2393,11 +2409,11 @@ Table 3.5
 \end_layout
 
 \begin_layout Subsection
-Taxi Driver Component sub-system
+Taxi Driver Component subsystem
 \end_layout
 
 \begin_layout Subsubsection
-Taxi Driver Profile Manager
+Taxi Driver Profile Manager (S6)
 \end_layout
 
 \begin_layout Standard
@@ -2411,7 +2427,7 @@ interface.
 \end_layout
 
 \begin_layout Standard
-The integration testing happens in a similar way to the Customer sub-system
+The integration testing happens in a similar way to the Customer subsystem
  Profile Manager.
 \end_layout
 
@@ -2459,7 +2475,7 @@ the Data Manager driver is substituted with the real component, while a
 \series bold
 I53
 \series default
-: the whole sub-system is tested without using any driver; the test is passed
+: the whole subsystem is tested without using any driver; the test is passed
  when all the notifications, for all the supported operations, are dispatched
  to the correct receiver.
 \end_layout
@@ -2652,7 +2668,7 @@ Table 3.6
 \end_layout
 
 \begin_layout Subsubsection
-Incoming Call Manager
+Incoming Call Manager (S7)
 \end_layout
 
 \begin_layout Standard
@@ -2709,14 +2725,14 @@ the Taxi Driver Component driver is substituted with the real component,
 \series bold
 I63
 \series default
-: the whole sub-system is tested without using any internal driver; the
- test is passed when all the data storage, delete, modify and retrieval
- operations are correctly performed.
+: the whole subsystem is tested without using any internal driver; the test
+ is passed when all the data storage, delete, modify and retrieval operations
+ are correctly performed.
 \end_layout
 
 \begin_layout Standard
-This current sub-system testing case needs some drivers that substitutes
- components of an external sub-system, successively tested and integrated
+This current subsystem testing case needs some drivers that substitutes
+ components of an external subsystem, successively tested and integrated
  with this one:
 \end_layout
 
@@ -2918,7 +2934,7 @@ Table 3.
 \end_layout
 
 \begin_layout Subsubsection
-Assistance Call Manager
+Assistance Call Manager (S8)
 \end_layout
 
 \begin_layout Standard
@@ -2977,7 +2993,7 @@ the Notification Manager driver is substituted with the real component,
 \series bold
 I73
 \series default
-: the whole sub-system is tested without using any driver; the test is passed
+: the whole subsystem is tested without using any driver; the test is passed
  when all the data storage, delete, modify and retrieval operations are
  correctly performed.
 \end_layout
@@ -3169,7 +3185,7 @@ Table 3.
 \end_layout
 
 \begin_layout Subsubsection
-Taxi Driver Logout Manager
+Taxi Driver Logout Manager (S9)
 \end_layout
 
 \begin_layout Standard
